css/social-block.css
/* General Styles for the block */
.social-block {
    display: block;
    margin-bottom: 1rem;
    font-size: 0;
}

.social-block.no-space {
}

/* Horizontal Block Styles */
.social-block.horizontal a {
    display: inline-block;
}

/* Vertical Block Styles */
.social-block.vertical a {
    display: block;
}

/* General Styles for the icons */
/*
    If you want to change the size of them, adjust the width, height and font-size.
    Positioning of the icons within their spaces is with percentages so they should scale nicely.
*/
.social-block a {
    overflow: hidden;
    margin: 0.3rem;
    width: 3.15rem;
    height: 3.15rem;
    text-decoration: none;
    font-size: 3.15rem;
    transition: background 0.2s ease-in-out;
}

.social-block.no-space a {
    margin: 0;
}

.social-block.no-bg a {
    background: transparent;
    color: #000;
}

.social-block a i {
    display: block;
    overflow: hidden;
    width: 3.15rem;
    height: 3.15rem;
    background-color: #000;
    color: #fff;
    vertical-align: middle;
    text-align: center;
    text-decoration: none;
    transition: 0.2s ease-in-out;
}

.social-block a:hover i {
    background-color: #5e5e5e;
}

.social-block a i:before {
    display: inline-block;
}

/* size styles for the block */
.social-block.small a, .social-block.small a i {
    width: 2rem;
    height: 2rem;
    font-size: 2rem;
}

.social-block.large a, .social-block.large a i {
    width: 4.2rem;
    height: 4.2rem;
    font-size: 4.2rem;
}

.social-block.x-large a, .social-block.x-large a i {
    width: 5.5rem;
    height: 5.5rem;
    font-size: 5.5rem;
}

/* positioning for individual social icons */
.social-block a i.fa-facebook:before {
    margin-top: 18%;
    margin-left: 22%;
    font-size: 0.9em;
}

.social-block a i.fa-twitter {
    vertical-align: middle;
    font-size: 0.6em;
}

.social-block a i.fa-twitter:before {
    margin-top: 24%;
    margin-left: 3%;
}

.social-block a i.fa-google-plus:before {
    margin-top: 25%;
    margin-left: 7%;
    vertical-align: top;
    font-size: 0.6em;
}

.social-block a i.fa-linkedin {
    vertical-align: top;
    line-height: 0.9;
}

.social-block a i.fa-linkedin:before {
    margin-top: 22%;
    margin-left: 3%;
    vertical-align: top;
    font-size: 0.6em;
}

.social-block a i.fa-instagram {
    vertical-align: top;
    line-height: 0.9;
}

.social-block a i.fa-instagram:before {
    margin-top: 26%;
    margin-left: 2%;
    vertical-align: top;
    font-size: 0.57em;
}

.social-block a i.fa-pinterest {
    vertical-align: top;
    line-height: 0.83;
}

.social-block a i.fa-pinterest:before {
    font-size: 0.7em;
}

.social-block a i.fa-envelope {
    vertical-align: top;
    line-height: 0.73;
}

.social-block a i.fa-envelope:before {
    margin-top: 32%;
    margin-left: 3%;
    vertical-align: top;
    text-align: center;
    font-size: 0.5em;
}

/* coloured icons */
.social-block.coloured a i.fa-facebook {
    background-color: #3b5998;
}

.social-block.coloured a i.fa-twitter {
    background-color: #55acee;
}

.social-block.coloured a i.fa-google-plus {
    background-color: #dd4b39;
}

.social-block.coloured a i.fa-linkedin {
    background-color: #3b5998;
}

.social-block.coloured a i.fa-instagram {
    background-color: #0976b4;
}

.social-block.coloured a i.fa-pinterest {
    background-color: #cc2127;
}

.social-block.coloured a i.fa-envelope {
    background-color: #9c9e9f;
}


/* coloured on hover */
.social-block.hover-coloured a { overflow: visible; }
.social-block.hover-coloured a i.fa-facebook:hover {
   background-color: #3b5998;
}

.social-block.hover-coloured a i.fa-twitter:hover {
    background-color: #55acee;
}

.social-block.hover-coloured a i.fa-google-plus:hover {
    background-color: #dd4b39;
}

.social-block.hover-coloured a i.fa-linkedin:hover {
    background-color: #3b5998;
}

.social-block.hover-coloured a i.fa-instagram:hover {
    background-color: #0976b4;
}

.social-block.hover-coloured a i.fa-pinterest:hover {
    background-color: #cc2127;
}

.social-block.hover-coloured a i.fa-envelope:hover {
    background-color: #9c9e9f;
}

/* descending grey */


.social-block.grey-desc a i {
    background-color: #383737;
}
.social-block.grey-desc a:nth-child(n+2) i {
    background-color: #474747;
}
.social-block.grey-desc a:nth-child(n+3) i {
    background-color: #666666;
}
.social-block.grey-desc a:nth-child(n+4) i {
    background-color: #868686;
}
.social-block.grey-desc a:nth-child(n+5) i {
    background-color: #c2c2c2;
}


/* Radius Icons */
.social-block.radius a,
.social-block.radius a i {
    -webkit-border-radius: 0.3rem;
    -moz-border-radius: 0.3rem;
    border-radius: 0.3rem;
}

/* Circle Icons */
.social-block.circles a,
.social-block.circles a i {
    -webkit-border-radius: 2rem;
    -moz-border-radius: 2rem;
    border-radius: 2rem;
}

/* Free floating */
/* basically, these are just the 'standard' icons */
.social-block.free-float a,
.social-block.free-float a i {
    background: transparent;
    color: #fff;
}

.social-block.free-float a i:before {
    color: #000;
    font-size: 0.8em;
}

.social-block.free-float a i.fa-facebook:before {
    margin-left: 0;
}

.social-block.free-float a i.fa-twitter {
    font-size: 0.9em;
}

/* Hexagonal icons */
.social-block.hexagons {
    margin: 1.5rem 0;
}

.social-block.hexagons a {
    overflow: visible;
}

.social-block.hexagons a,
.social-block.hexagons a i {
    width: 3rem;
    height: 1.5rem;
    font-size: 1.5rem;
}

.social-block.hexagons a i.fa-facebook:before {
    margin-left: 2%;
}

.social-block.hexagons a i.fa-google-plus:before {
    margin-top: 5%;
    margin-left: 5%;
    font-size: 1em;
    line-height: 1;
}

.social-block.hexagons a i.fa-twitter {
    font-size: 1em;
    line-height: 0.3;
}

.social-block.hexagons a i.fa-pinterest {
    font-size: 1.3em;
    line-height: 0.6;
}

.social-block.hexagons a i.fa-envelope {
    font-size: 1.3em;
    line-height: 0.5;
}

.social-block.hexagons a {
    position: relative;
    background: #000;
}

.social-block.hexagons a:before,
.social-block.hexagons a:after {
    position: absolute;
    display: block;
    width: 0;
    border-right: 1.5rem solid transparent;
    border-left: 1.5rem solid transparent;
    content: ' ';
    transition: 0.2s ease-in-out;
}

.social-block.hexagons a:before {
    top: -1rem;
    border-bottom: 1rem solid #000;
}

.social-block.hexagons a:after {
    bottom: -1rem;
    border-top: 1rem solid #000;
}

.social-block.hexagons a:hover:before {
    top: -1rem;
    border-bottom: 1rem solid #5e5e5e;
}

.social-block.hexagons a:hover:after {
    bottom: -1rem;
    border-top: 1rem solid #5e5e5e;
}

/* Tiled hexagonal icons */
.social-block.hexagons.tiled {
    margin: 1.5rem 0 7.5rem 0;
}

.social-block.hexagons.tiled a {
    float: left;
    margin: 0.1rem;
}

.social-block.hexagons.tiled a:nth-child(even) {
    margin-top: 2.9rem;
    margin-right: -1.4rem;
    margin-left: -1.4rem;
}

/* tiled 3 */

.social-block.hexagons.tiled-3 {
    margin: 1.5rem 0 11rem 0;
}

.social-block.hexagons.tiled-3 a {
    float: left;
    margin: 0.1rem;
}

/* 2 5 8 11 */
.social-block.hexagons.tiled-3 a:nth-child(n+1) {
    margin-top: 5.8rem;
    margin-right: -2.8rem;
    margin-left: -3.1rem;
}

/* 3 6 9 */
.social-block.hexagons.tiled-3 a:nth-child(3n+3) {
    margin-top: 2.9rem;
    margin-right: -1.4rem;
    margin-left: -1.4rem;
}

/* 1 4 7 10 */
.social-block.hexagons.tiled-3 a:nth-child(3n+1) {
    margin: 0.1rem;
}

/* left first tiled hexagons */
.social-block.hexagons.tiled-3.middle-first {
    padding-left: 1.5rem;
}

/* middle row positioning */
.social-block.hexagons.tiled-3.middle-first a:nth-child(n+1) {
    margin: 0.1rem;
}

/* top row positioning */
.social-block.hexagons.tiled-3.middle-first a:nth-child(3n+1) {
    margin-top: 2.9rem;
    margin-right: -1.4rem;
    margin-left: -1.4rem;
}

/* bottom positioning */
.social-block.hexagons.tiled-3.middle-first a:nth-child(3n+3) {
    margin-top: 5.8rem;
    margin-right: -2.8rem;
    margin-left: -3.1rem;
}

/*
    Of course, you can write your own styles to override the ones above.
    You can even mess with them, they're just there as a starting point so we're not re-inventing the wheel every time!

    I've only written styles for a few social media sites currently, more will be added if needed in time.
*/

